--- a/charts/kube-node-init/templates/daemonset.yaml
+++ b/charts/kube-node-init/templates/daemonset.yaml
@@ -91,16 +91,9 @@ spec:
 {{- if .Values.livenessProbe }}
         livenessProbe:
 {{ toYaml .Values.livenessProbe | indent 10 }}
-{{- else }}
-        livenessProbe:
-          httpGet:
-            path: /health
-            port: 5555
-          initialDelaySeconds: 15
-          periodSeconds: 15
-          timeoutSeconds: 5
-          successThreshold: 1
-          failureThreshold: 6
+{{- end }}
+        readinessProbe:
+{{ toYaml .Values.readinessProbe | indent 10 }}
 {{- end }}
       volumes:
       - name: host-var
