--- a/charts/kube-node-init/templates/daemonset.yaml
+++ b/charts/kube-node-init/templates/daemonset.yaml
@@ -92,6 +92,7 @@ spec:
         livenessProbe:
 {{ toYaml .Values.livenessProbe | indent 10 }}
 {{- end }}
+{{- if .Values.readinessProbe }}
         readinessProbe:
 {{ toYaml .Values.readinessProbe | indent 10 }}
 {{- end }}
