--- a/charts/kube-node-init/templates/daemonset.yaml
+++ b/charts/kube-node-init/templates/daemonset.yaml
@@ -53,6 +53,9 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: spec.nodeName
+        - name: TEST
+          value: HOGE
+
 {{ include "node-init.env" . | indent 8 }}
         volumeMounts:
         - name: host-var
