--- a/charts/kube-node-init/templates/secrets.yaml
+++ b/charts/kube-node-init/templates/secrets.yaml
@@ -27,7 +27,7 @@ data:
 {{- end }}
 {{- end }}
 
-{{- if not (empty $secret.files) }}
+{{- if or (not (empty $secret.files)) (not (empty $secret.templates)) }}
 ---
 apiVersion: v1
 kind: Secret
@@ -52,6 +52,12 @@ data:
   {{ $key  }}: {{ $value | b64enc }}
 {{- end }}
 {{- end }}
+
+{{- range $key, $value := $secret.templates }}
+  {{ $key  }}: |
+{{ tpl $value $ | indent 4 }}
+{{- end }}
+
 {{- end }}
 
 {{- end }}
